# feCUDA

./: .clang-format  .clangd  .gitignore  CC.npy  CE.npy  CLANG_CONFIG.md  CMakeLists.txt  EE.npy  EX.npy  MIGRACION_EXITOSA.md  README.md  REFACTORIZACION_UTILIDADES.md  SPRINT_NOTES.md  backlog_sprint1.xlsx  bench.cu  convert_npy_to_txt.py  env.json  main.py  note.md  paths0.txt  procesar_datasets.cu  readme.md  test.md  test_kernel_v1.cu  values0.txt
.github/workflows/: generate-bench-index.yml
antiguos/feCuda/: feCUDA_backlogs.xlsx
bench/: run_bench.py
bench/definitions/: static_dimensions.json
bench/results/: index.json
bench/results/20251124_224704_CPU_bench/: benchmark.md  dimension_summary.csv  metrics.csv
bench/results/20251127_210051_bench/: benchmark.md
bench/results/20251230_233229_static/: benchmark.md  dimension_summary.csv  metrics.csv
bench/results/20251230_234838_static/: benchmark.md
bench/results/gpu_bench/: benchmark.md  dimension_summary.csv  metrics.csv
benchmark/: CHANGELOG.md  PERF.md
benchmark/benchmarks/: README.md  timer.cu
benchmark/config/: benchmarks.json
benchmark/docs/: failure-log.md
benchmark/docs/ADR/: ADR-0001-fused-kernel.md
benchmark/docs/experiments/2025-02-14-exp-001-fused-kernel/: EXPERIMENT.md
benchmark/scripts/: capture_env.sh
benchmarks/: performance_benchmarks.cu
datasets_txt/: CC.txt  CE.txt  EE.txt  reflexive.txt
docs/: TODO-sprint-3.md  backlog_sprint2.xlsx  graph_sim_pipeline.md
examples/: maxmin_with_utils_example.cu  usage_examples.cu
include/: headers.cuh  maxmin_kernels.cuh  simple_logger.hpp  temp.cuh  types.cuh  utils.cuh
include/algorithms/: bootstrap.cuh  indices.cuh  maxmin.cuh  mst_paths.cuh  paths.cuh
include/core/: tensor.cuh  types.cuh
include/kernels/: kernels.cuh  maxmin_kernels.cuh
include/test/: test.cuh
include/utils/: cuda_utils.cuh  eta_metrics.cuh  file_io.cuh  graph_generator.cuh  logging.cuh  memory_utils.cuh  validation_utils.cuh
results/: CC_min.txt  EE_min.txt  graph_sim.csv  reflexive_min.txt
results/benchmarks/20251109_manual/: ncu_report_bootstrap_cc_reps_10.ncu-rep  ncu_report_bootstrap_cc_reps_100.ncu-rep  ncu_report_bootstrap_cc_reps_1000.ncu-rep
results/benchmarks/20251110_manual/: metrics.csv
results/benchmarks/20251110_tag/: metrics.csv
results/benchmarks/20251110_warp-maxmin/: metrics.csv
results/benchmarks/20251113_manual/: metrics.csv
scripts/: generate_bench_index.py  graph_sweep.py
services/: effects_api.py  effects_api_binding.cpp
services/web/: app.js  index.html  styles.css
src/: armar_caminos.cu  bindings.cu  indices.cu  iterative_maxmin_cuadrado.cu  main.cpp  main.cu  maxmin.cu  simple_logger.cpp  utils.cu
src/algorithms/: armar_caminos.cu  binned_bootstrap.cu  bootstrap.cu  indices.cu  indices2.cu  iterative_maxmin_cuadrado.cu  maxmin.cu  mst_paths.cu  prima.cu  quantil_bootstrap.cu
src/core/: tensor.cu
src/kernels/bootstrap/: v1.cu
src/kernels/maxmin/: kernel_v1.cu  kernel_v1_f16.cu  kernel_v2.cu
src/kernels/maxmin/lineal_maxmin/: lineal_kernel.cu
src/kernels/utils/: traspose.cu
src/maxmin/: kernel_v1.cu
src/utils/: batched_ops.cu  compare.cu  cuda_utils.cu  eta_metrics.cu  file_io.cu  graph_generator.cu  guardar_archivo.cu  imprimir_tensor.cu  leer_archivo.cu  nextPow.cu  uniform.cu  validar_algoritmos_maxmin.cu
test/: simple_test.cu
tests/: bootstrap.cu  iterativemxmn.cu  unit_tests.cu
toolchain/fallback/: stdlib.h
tools/: plot_bench.py  run_validation.sh
validation/: README.md  generate_results.cu  validation.py
validation/data/: paths_values_cc_0.3.json  paths_values_cc_0.5.json  paths_values_cc_0.7.json  paths_values_ee_0.3.json
validation/results/: paths_values_bootstrap_10.json  paths_values_bootstrap_100.json  paths_values_cc_0.1.json  paths_values_cc_0.3.json  paths_values_cc_0.5.json  paths_values_cc_0.7.json  paths_values_ee_0.1.json  paths_values_ee_0.3.json  paths_values_ee_0.5.json
